--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,10 @@
+:root{
+    --color-primary: #687ae5;
+    --color-secundary: #754fa8;
+    --shadow:0px 2px 10px rgba(0, 0, 0, 0.1);
+
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -11,12 +18,13 @@ body{
 
 header{
     background: linear-gradient(135deg,#687AE5 0%, #754fa8 100%);
+    background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-secundary) 100%);
     color: white;
     position: fixed; 
     width: 100%;
     top: 0;
     z-index: 1000;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--shadow)
 }
 
 nav{
@@ -51,6 +59,7 @@ nav a:hover {
 
 .hero{
     background: linear-gradient(135deg, #687AE5 0%, #754fa8 100%);
+    background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-secundary) 100%);
     color: white;
     display: flex;
     align-items: center;
@@ -74,7 +83,7 @@ nav a:hover {
     display: inline-block;
     background: white;
     padding: 1rem 2rem;
-    color: #687AE5;
+    color: var(--color-primary);
     font-weight: bold;
     text-decoration: none;
     border-radius: 50px;
@@ -97,7 +106,7 @@ h2{
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 3rem;
-    color: #687AE5;
+    color: var(--color-primary);
 }
 
 .sobre-mi{
@@ -116,7 +125,7 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, #687AE5 0%, #754fa8 100%);
+    background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-secundary) 100%);
     font-size: 4rem;
     border-radius: 20px;
     height: 400px;
@@ -135,9 +144,49 @@ h2{
     background: white;
     padding: 2rem;
     border-radius: 15px;
+    box-shadow: var(--shadow);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
 .skills-card h3 {
-    color: #687ae5;
+    color: var(--color-primary);
     
+}
+
+.skills-container > * {
+    width: 100%;
+}
+
+
+.skills-bar{
+    width: 100%;
+    height: 10px;
+    background: #e0e0e0;
+    border-radius: 5px;
+    margin-top: 0.5rem;
+}
+
+.skills-progress{
+    height: 100%;
+    background: linear-gradient(135deg,var(--color-primary) 0%, var(--color-secundary) 100%);
+    border-radius: 5px;
+}
+
+.ochenta{
+    width: 80%;
+}
+
+.noventa{
+    width: 90%;
+}
+
+.sesenta{
+    width: 60%;
+}
+
+.noventaycinco{
+    width: 95%;
 }
