--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,8 @@
     --color-primary: #687ae5;
     --color-secundary: #754fa8;
     --shadow:0px 2px 10px rgba(0, 0, 0, 0.1);
+    --shadow2: 0px 10px 20px rgba(0, 0, 0, 0.2);
+    --gradiente: linear-gradient(135deg, var(--color-primary) 0%, var(--color-secundary) 100%);
 
 }
 
@@ -9,6 +11,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+html{
+    scroll-behavior: smooth;
 }
 
 body{
@@ -47,6 +52,23 @@ nav ul{
     gap: 2rem;
 }
 
+@media (max-width: 768px){
+    .logo{
+        font-size: 1.2rem;
+    }
+    nav{
+        flex-direction: column;
+        justify-content: center;
+        padding: 0.2rem;
+    }
+    nav ul{
+        flex-direction: column;
+        text-align: center;
+        gap: 0.2rem;
+    }
+    
+}
+
 nav a{
     color: white;
     text-decoration: none;
@@ -56,6 +78,8 @@ nav a{
 nav a:hover {
     opacity: 0.8;
 }
+
+/* Seccion hero */
 
 .hero{
     background: linear-gradient(135deg, #687AE5 0%, #754fa8 100%);
@@ -93,14 +117,25 @@ nav a:hover {
 
 .button:hover{
     transform: translateY(-3px);
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--shadow2);
 }
 
+@media(max-width: 768px){
+    .hero{
+        margin-top: 0;
+    }
+    .hero-content h1{
+        font-size: 2.5rem;
+    }
+}
+
+/* Secciones */
 section{
     max-width: 1200px;
     margin: auto;
     padding: 5rem 2rem;
 }
+
 
 h2{
     font-size: 2.5rem;
@@ -125,19 +160,34 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-secundary) 100%);
+    background: var(--gradiente);
     font-size: 4rem;
     border-radius: 20px;
     height: 400px;
 }
 
-.skills{
+@media(max-width: 768px){
+    .sobre-mi{
+        flex-direction: column;
+    }
+    .sobre-mi-texto{
+        width: 95%;
+        margin-bottom: 1rem;
+    }
+    .sobre-mi-imagen{
+        width: 95%;
+    }
+}
+
+.skills, .contacto {
     background: #e5e3e3;
 }
+
 .skills-container{
-    display: flex;
+    display: grid;
     gap: 2%;
-    padding: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
 }
 
 .skills-card{
@@ -149,6 +199,11 @@ h2{
     flex-direction: column;
     justify-content: space-between;
 
+}
+
+.skills-card:hover{
+    transform: translateY(-3px);
+    box-shadow: var(--shadow2);
 }
 
 .skills-card h3 {
@@ -171,7 +226,7 @@ h2{
 
 .skills-progress{
     height: 100%;
-    background: linear-gradient(135deg,var(--color-primary) 0%, var(--color-secundary) 100%);
+    background: var(--gradiente);
     border-radius: 5px;
 }
 
@@ -189,4 +244,64 @@ h2{
 
 .noventaycinco{
     width: 95%;
+}
+
+.project-card{
+    padding: 0;
+}
+
+.project-image{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-secundary) 100%);
+    background: var(--gradiente);
+    font-size: 3rem;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    height: 200px;
+}
+
+.project-content{
+    padding: 1.2rem;
+    line-height: 1.6;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 60%;   
+}
+.project-tags{
+    margin-top: 1rem;
+}
+
+
+.project-tags span{
+    background-color: rgb(216, 216, 225);
+    padding: 0.5rem;
+    margin-top: 0.3rem;
+    border-radius: 10px;
+    color: var(--color-primary);
+}
+
+/* contacto */
+.contacto{
+    text-align: center;
+}
+
+.contactos{
+    margin-top: 1rem;
+}
+.contactos a{
+    background: var(--gradiente);
+    color: white;
+    margin: 0 0.5rem;
+}
+
+/* footer */
+footer{
+    background: var(--color-secundary);
+    color: white;
+    text-align: center;
+    padding: 2rem;
 }
